Revamp README.md and preview.html to enhance tech stack presentation with visual proficiency bars

--- a/preview.html
+++ b/preview.html
@@ -23,7 +23,7 @@
     code { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
     details { background: rgba(127,127,127,.06); padding: 8px 12px; border-radius: 8px; }
     .mermaid { margin: 12px 0; }
-    a { color: #2563eb; text-decoration: none; }
+  a { color: #6366f1; text-decoration: none; }
     a:hover { text-decoration: underline; }
   </style>
 </head>
@@ -48,24 +48,129 @@
 
 ## 🛠️ Tech Stack
 
-```mermaid
-%%{init: {"theme": "neutral"}}%%
-pie showData
-    title Tech Stack (Proficiency)
-    "HTML" : 98
-    "CSS" : 98
-    "Responsive Design" : 98
-    "PHP" : 95
-    "SQL" : 95
-    "GIT" : 95
-    "JavaScript" : 90
-    "Laravel" : 90
-    "Vue" : 90
-    "TailwindCSS" : 90
-    "Bootstrap" : 90
-    "TCPDF" : 90
-    "GitHub" : 90
-```
+<!-- Simple, reliable HTML bars (works on GitHub) -->
+<table>
+  <tbody>
+    <tr>
+      <td width="160"><strong>HTML</strong></td>
+      <td width="520">
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:98%;height:100%"></div>
+        </div>
+      </td>
+      <td width="60" align="right">98%</td>
+    </tr>
+    <tr>
+      <td><strong>CSS</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:98%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">98%</td>
+    </tr>
+    <tr>
+      <td><strong>Responsive Design</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:98%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">98%</td>
+    </tr>
+    <tr>
+      <td><strong>PHP</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:95%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">95%</td>
+    </tr>
+    <tr>
+      <td><strong>SQL</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:95%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">95%</td>
+    </tr>
+    <tr>
+      <td><strong>GIT</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:95%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">95%</td>
+    </tr>
+    <tr>
+      <td><strong>JavaScript</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>Laravel</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>Vue</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>TailwindCSS</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>Bootstrap</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>TCPDF</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+    <tr>
+      <td><strong>GitHub</strong></td>
+      <td>
+        <div style="background:#e5e7eb;height:8px;border-radius:999px;overflow:hidden;">
+          <div style="background:linear-gradient(90deg,#6366f1,#22d3ee);width:90%;height:100%"></div>
+        </div>
+      </td>
+      <td align="right">90%</td>
+    </tr>
+  </tbody>
+  
+</table>
 
 <details>
   <summary>Plain list (fallback)</summary>
