Add achievements and stats section to README.md and preview.html; implement private language mix generator workflow

--- a/preview.html
+++ b/preview.html
@@ -70,6 +70,44 @@
 
 ---
 
+## 🏆 Achievements & Stats
+
+<p align="center">
+  <a href="https://github.com/ryo-ma/github-profile-trophy" title="GitHub Profile Trophies">
+    <img src="https://github-profile-trophy.vercel.app/?username=Faithan&theme=onedark&no-frame=true&row=1&column=6" alt="GitHub Trophies" />
+  </a>
+</p>
+
+<p align="center">
+  <img height="160" src="https://github-readme-stats.vercel.app/api?username=Faithan&show_icons=true&count_private=true&include_all_commits=true&theme=tokyonight&hide_border=true" alt="Faithan's GitHub Stats (with private)" />
+  <img height="160" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Faithan&layout=compact&theme=tokyonight&hide_border=true" alt="Top Languages" />
+</p>
+
+<p align="center">
+  <img height="190" src="https://streak-stats.demolab.com?user=Faithan&theme=tokyonight&hide_border=true" alt="GitHub Streak" />
+</p>
+
+<sub><em>Note:</em> Stats card uses <code>count_private=true</code>; private contributions only appear if self-hosted with a token. Public instance omits true private data.</sub>
+
+---
+
+### 🔒 Private + Public Language Mix (Self-Hosted)
+
+<em>Generate locally (includes private & org repos you can access):</em>
+
+1. Create a classic PAT or fine-grained token with repo (read) + read:org.
+2. PowerShell:
+   <br><code>$Env:GITHUB_TOKEN="YOUR_TOKEN"; node scripts/generate_language_stats.js &gt; assets/private-langs.svg</code>
+3. Refresh this preview after committing.
+
+<p align="center">
+  <img src="./assets/private-langs.svg" alt="Private + Public Language Mix" />
+</p>
+
+<sub>Broken image? Run the script above to generate it.</sub>
+
+---
+
 ## 🔗 Connect
 
 - [LinkedIn](https://www.linkedin.com/in/khemark-ocariza-509b71215/)
