--- a/preview.html
+++ b/preview.html
@@ -70,7 +70,7 @@
 
 ---
 
-## 🏆 Achievements & Stats
+## 🏆 Public Achievements & Stats
 
 <p align="center">
   <a href="https://github.com/ryo-ma/github-profile-trophy" title="GitHub Profile Trophies">
@@ -87,24 +87,7 @@
   <img height="190" src="https://streak-stats.demolab.com?user=Faithan&theme=tokyonight&hide_border=true" alt="GitHub Streak" />
 </p>
 
-<sub><em>Note:</em> Stats card uses <code>count_private=true</code>; private contributions only appear if self-hosted with a token. Public instance omits true private data.</sub>
-
----
-
-### 🔒 Private + Public Language Mix (Self-Hosted)
-
-<em>Generate locally (includes private & org repos you can access):</em>
-
-1. Create a classic PAT or fine-grained token with repo (read) + read:org.
-2. PowerShell:
-   <br><code>$Env:GITHUB_TOKEN="YOUR_TOKEN"; node scripts/generate_language_stats.js &gt; assets/private-langs.svg</code>
-3. Refresh this preview after committing.
-
-<p align="center">
-  <img src="./assets/private-langs.svg" alt="Private + Public Language Mix" />
-</p>
-
-<sub>Broken image? Run the script above to generate it.</sub>
+<sub><em>Note:</em> Private repositories and private organization contributions are not included.</sub>
 
 ---
 
