Add profile views image to README.md and preview.html

--- a/preview.html
+++ b/preview.html
@@ -40,6 +40,8 @@
 
 <sub>Web Developer | Full Stack | Minimalist</sub>
 
+<p><img src="https://komarev.com/ghpvc/?username=Faithan&style=flat&color=6366f1" alt="Profile views" /></p>
+
 ---
 
 👋 Hi, I'm Khemark — I craft seamless digital experiences, blending design and functionality for the web. I love building both the front-end and back-end of web applications, always with a focus on clarity, usability, and impact.
